ai-ml/cici-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cici-dashboard
  namespace: ai-ml
  labels:
    app: cici-dashboard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cici-dashboard
  template:
    metadata:
      labels:
        app: cici-dashboard
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8501"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: cici-dashboard
      containers:
      - name: cici-dashboard
        image: 192.168.50.2:5050/ai-ml/cici/dashboard:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
      imagePullSecrets:
      - name: gitlab-registry
